# multimodal-agent-vision-code

./: .env.example  .gitignore  CLERK_INTEGRATION.md  CODING_STANDARDS.md  IMPLEMENTATION_GUIDE.md  LLM_CONFIG.md  README.md  STEP_BY_STEP_PLAN.md  WORK_LOG.md  architecturediagram.md  brainstorming.md  folder_structure.md  prd.md  techstack.md  testing_and_error_handling.md
.github/workflows/: ci.yml
archive/: PHASE_1_PROMPT.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/adapters/: __init__.py
backend/app/agents/prompts/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  files.py  jobs.py  models.py
backend/app/core/: cache.py  database.py  errors.py  logging.py  rate_limiter.py
backend/app/models/: user.py
backend/app/services/: __init__.py  storage.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_cache.py  test_config.py  test_health.py  test_rate_limiter.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/__tests__/: setup.ts  utils.test.ts
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  JobDetailPage.tsx
frontend/src/styles/: globals.css
multimodal-agent/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
multimodal-agent/backend/: requirements.txt
multimodal-agent/backend/app/: config.py  main.py
multimodal-agent/frontend/: package-lock.json  package.json  tailwind.config.js
multimodal-agent/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
sandbox/: Dockerfile  seccomp-profile.json
(+30 files in other folders)
